# topas_yezr

./: .gitignore  CMakeLists.txt  Installing.txt  ReadMe.md  Test.txt  TsTopasConfig.hh.in  topas.cc
Geant4Headers/: G4AffineTransform.icc  G4BCLateParticle.hh  G4ChordFinderDelegate.icc  G4ComponentGGHadronNucleusXsc.hh  G4DynamicParticle.icc  G4EllipticalCone.icc  G4FSALIntegrationDriver.icc  G4FieldUtils.icc  G4Fragment.hh  G4GeomConfig.hh  G4GlobalConfig.hh  G4INCLNDFModifiedHarmonicOscillator.hh  G4ITStepProcessor.hh  G4IntegrationDriver.icc  G4InterpolationDriver.icc  G4MagErrorStepper.icc  G4MergeMode.hh  G4ParamExpTwoBodyAngDst.icc  G4ParticleHPChannelList.hh  G4ParticleHPContAngularPar.hh  G4ParticleHPFissionBaseFS.hh  G4ParticleHPInelasticBaseFS.hh  G4ParticleHPInelasticCompFS.hh  G4ParticleHPIsoData.hh  G4ParticleHPPartial.hh  G4PhysicsVector.icc  G4QSS2.hh  G4RadioactiveDecay.hh  G4RandomTools.hh  G4ScaleTransform.icc  G4SimplexDownhill.icc  G4Solver.icc  G4Sphere.icc  G4SteppingManager.hh  G4UrbanMscModel.hh  G4VIntersectionLocator.icc  G4Vee2hadrons.hh  G4WentzelOKandVIxSection.hh  expat_config.h
filtering/: TsFilterByCharge.cc  TsFilterByGeneration.cc  TsFilterByIncidentParticleGeneration.cc  TsFilterByIncidentParticleGeneration.hh  TsFilterByIncidentParticleKE.cc  TsFilterByIncidentParticleKE.hh  TsFilterByIncidentParticleMomentum.cc  TsFilterByIncidentParticleMomentum.hh  TsFilterByIncidentParticleType.cc  TsFilterByIncidentParticleType.hh  TsFilterByInitialKE.cc  TsFilterByInitialKE.hh  TsFilterByInitialMomentum.cc  TsFilterByInitialMomentum.hh  TsFilterByInteractedOrTraversed.cc  TsFilterByInteractedOrTraversed.hh  TsFilterByInteractionCount.cc  TsFilterByInteractionCount.hh  TsFilterByInverse.cc  TsFilterByInverse.hh  TsFilterByKE.cc  TsFilterByKE.hh  TsFilterByMaterial.cc  TsFilterByMaterial.hh  TsFilterByMomentum.cc  TsFilterByMomentum.hh  TsFilterByOrigin.cc  TsFilterByOrigin.hh  TsFilterByPrimaryKE.cc  TsFilterByPrimaryKE.hh  TsFilterByRTStructure.cc  TsFilterByRTStructure.hh  TsFilterByTimeOfFlight.cc  TsFilterByTimeOfFlight.hh  TsFilterByType.cc  TsFilterByType.hh  TsFilterByWeight.cc  TsFilterByWeight.hh  TsFilterHub.cc  TsFilterHub.hh  (+6 more)
geometry/: TsAperture.cc  TsAperture.hh  TsApertureArray.cc  TsApertureArray.hh  TsBorderSurface.cc  TsBorderSurface.hh  TsBox.cc  TsBox.hh  TsBrachyApplicator.cc  TsBrachyApplicator.hh  TsBrachyShieldStar.cc  TsBrachyShieldStar.hh  TsBrachyShieldWedge.cc  TsBrachyShieldWedge.hh  TsCADComponent.cc  TsCADComponent.hh  TsCompensator.cc  TsCompensator.hh  TsCylinder.cc  TsCylinder.hh  TsDivergingMLC.cc  TsDivergingMLC.hh  TsElectroMagneticFieldUniform.hh  TsEye.cc  TsEye.hh  TsEyePlaque.cc  TsEyePlaque.hh  TsGenericComponent.cc  TsGenericComponent.hh  TsGeometryHub.cc  TsGeometryHub.hh  TsGeometryManager.cc  TsGeometryManager.hh  TsImageCube.cc  TsImageCube.hh  TsImagingToMaterialByTagNumber.cc  TsImagingToMaterialByTagNumber.hh  TsJaws.cc  TsJaws.hh  TsMagneticFieldDipole.hh  (+31 more)
io/: TsFileHub.cc  TsFileHub.hh  TsNtupleAscii.cc  TsNtupleAscii.hh  TsNtupleBinary.cc  TsNtupleBinary.hh  TsVFile.cc  TsVFile.hh  TsVNtuple.cc  TsVNtuple.hh
main/: CMakeLists.txt  TsMain.cc  TsMain.hh
material/: TsMaterialManager.cc  TsMaterialManager.hh
parameter/: TsBooleanFromBoolean.cc  TsBooleanFromBoolean.hh  TsBooleanFromBooleanTimesBoolean.cc  TsBooleanFromBooleanTimesBoolean.hh  TsBooleanFromTimeFeatureStep.cc  TsBooleanFromTimeFeatureStep.hh  TsBooleanFromValue.cc  TsBooleanFromValue.hh  TsBooleanVectorFromBooleanVector.cc  TsBooleanVectorFromBooleanVector.hh  TsBooleanVectorFromValue.cc  TsBooleanVectorFromValue.hh  TsDefaultParameters.cc  TsDefaultParameters.hh  TsDoubleFromDouble.cc  TsDoubleFromDouble.hh  TsDoubleFromDoubleMinusDouble.cc  TsDoubleFromDoubleMinusDouble.hh  TsDoubleFromDoubleMinusValue.cc  TsDoubleFromDoubleMinusValue.hh  TsDoubleFromDoublePlusDouble.cc  TsDoubleFromDoublePlusDouble.hh  TsDoubleFromDoublePlusValue.cc  TsDoubleFromDoublePlusValue.hh  TsDoubleFromDoubleTimesInteger.cc  TsDoubleFromDoubleTimesInteger.hh  TsDoubleFromDoubleTimesUnitless.cc  TsDoubleFromDoubleTimesUnitless.hh  TsDoubleFromDoubleTimesValue.cc  TsDoubleFromDoubleTimesValue.hh  TsDoubleFromIntegerTimesValue.cc  TsDoubleFromIntegerTimesValue.hh  TsDoubleFromTimeFeature.cc  TsDoubleFromTimeFeature.hh  TsDoubleFromTimeFeatureStep.cc  TsDoubleFromTimeFeatureStep.hh  TsDoubleFromUnitlessTimesValue.cc  TsDoubleFromUnitlessTimesValue.hh  TsDoubleFromValue.cc  TsDoubleFromValue.hh  (+237 more)
physics/: CMakeLists.txt  TsModularPhysicsList.cc  TsModularPhysicsList.hh  TsModularPhysicsList.icc  TsPhotoNeutron.cc  TsPhotoNeutron.hh  TsPhysicsManager.cc  TsPhysicsManager.hh
primary/: TsGeneratorBeam.cc  TsGeneratorBeam.hh  TsGeneratorDistributed.cc  TsGeneratorDistributed.hh  TsGeneratorEmittance.cc  TsGeneratorEmittance.hh  TsGeneratorEnvironment.cc  TsGeneratorEnvironment.hh  TsGeneratorIsotropic.cc  TsGeneratorIsotropic.hh  TsGeneratorManager.cc  TsGeneratorManager.hh  TsGeneratorPhaseSpace.cc  TsGeneratorPhaseSpace.hh  TsGeneratorPhaseSpaceOld.cc  TsGeneratorPhaseSpaceOld.hh  TsGeneratorVolumetric.cc  TsGeneratorVolumetric.hh  TsPrimaryParticle.hh  TsSource.cc  TsSource.hh  TsSourceDistributed.cc  TsSourceDistributed.hh  TsSourceEnvironment.cc  TsSourceEnvironment.hh  TsSourceManager.cc  TsSourceManager.hh  TsSourcePhaseSpace.cc  TsSourcePhaseSpace.hh  TsSourcePhaseSpaceOld.cc  TsSourcePhaseSpaceOld.hh  TsVGenerator.cc  TsVGenerator.hh
scoring/: TsScoreAmbientDoseEquivalent.cc  TsScoreAmbientDoseEquivalent.hh  TsScoreCharge.cc  TsScoreCharge.hh  TsScoreDoseToMaterial.cc  TsScoreDoseToMaterial.hh  TsScoreDoseToMedium.cc  TsScoreDoseToMedium.hh  TsScoreEffectiveCharge.cc  TsScoreEffectiveCharge.hh  TsScoreEnergyDeposit.cc  TsScoreEnergyDeposit.hh  TsScoreEnergyFluence.cc  TsScoreEnergyFluence.hh  TsScoreFluence.cc  TsScoreFluence.hh  TsScoreKineticEnergyAtSurface.cc  TsScoreKineticEnergyAtSurface.hh  TsScoreOpticalPhotonCount.cc  TsScoreOpticalPhotonCount.hh  TsScoreOriginCount.cc  TsScoreOriginCount.hh  TsScorePET.cc  TsScorePET.hh  TsScorePhaseSpace.cc  (+23 more)
(+64 files in other folders)
